--- a/res/layout/metawear_ble_info.xml
+++ b/res/layout/metawear_ble_info.xml
@@ -17,7 +17,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/device_name" />
 
-
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/device_address"
+        android:layout_alignParentTop="true"
+        android:layout_marginRighEnd="14dp"
+        android:layout_toStartOf="@+id/rssi"
+        android:contentDescription="@string/text_rssi_visual"
+        android:maxLevel="4"
+        android:minLevel="0"
+        android:src="@drawable/ic_rssi_level" />
 
     <TextView
         android:id="@+id/rssi"
